2006-01-16  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/commentline.py: allow_connect_handle does not throw an
	exception in some cases, now
	* gaphor/diagram/interface.py, gaphor/diagram/interfaceicon.py: use
	on_glue method to determine to which point of interface item handles of
	usage and implementation lines should be connected to in case of
	interface icon; interface icon provided and required points are always
	the same for all types of icons

2006-01-10  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.override: Components.{required,provided} basic
	implementation
	* gaphor/diagram/dependency.py: determine dependency type before
	connecting items
	* gaphor/ui/diagramactions.py: added zoom tooltips
	* gaphor/diagram/node.py: use proper UML element for node item
	* gaphor/ui/mainactions.py, gaphor/ui/mainwindow.py,
	gaphor/ui/abstractwindow.py: ask for permission to quit gaphor
	* gaphor/diagram/connector.py, gaphor/diagram/interface.py
	gaphor/diagram/interfaceicon.py gaphor/diagram/itemactions.py:
	connect assembly connector end items to components and allow to choose
	provided/required interfaces from menu; this way we kill dotted
	interface icon and speed up component diagram creation

2006-01-09  wrobell <wrobell@pld-linux.org>
	* gaphor/plugin.py: ask user if existing file can be overwritten during
	diagram export
	* gaphor/diagram/nameditem.py, gaphor/diagram/activitynodes.py: flow
	final and activity final nodes can have names, now

2006-01-03  wrobell <wrobell@pld-linux.org>
	* data/plugins/pdfexport/__init__.py,
	data/plugins/pdfexport/plugin.xml: PDF export plugin created

2006-01-03  wrobell <wrobell@pld-linux.org>
	* data/plugins/svgexport/__init__.py,
	data/plugins/pngexport/pngexport.py, gaphor/plugin.py: use common code
	for export a diagram into a file

2005-12-29  wrobell <wrobell@pld-linux.org>
	* bin/gaphorconvert, setup.py: added gaphorconvert utility, which
	allows to convert gaphor files into svg and pdf
